IDP-1099 - Expose properties via Metrics interface
https://issues.shibboleth.net/jira/browse/IDP-1099